--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>my solution</title>
@@ -30,6 +30,102 @@
 <body>
 <table id = "customers">
 	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+	<tr>
+		<th>Tag</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td>Google Search</td>
+	</tr>
+<tr>
 		<th>Tag</th>
 		<th>Description</th>
 	</tr>
