chages in index

--- a/index.html
+++ b/index.html
@@ -31,130 +31,74 @@
 <table id = "customers">
 	<tr>
 		<th>Tag</th>
-		<th>Description</th>
+		<th>Details</th>
 	</tr>
 	<tr>
 		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank">Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank">Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
-		<td>Google Search</td>
-	</tr>
-<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
 	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
+	<tr>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
+	<tr>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
-	</tr>
-<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
+	</tr>	
 	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
-	</tr>
+	</tr>	
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
 	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
 	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
+		<td>Google Search</td>
+	</tr>	
+	<tr>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
-		<td>Google Search</td>
-	</tr>
-<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
-		<td>Google Search</td>
-	</tr>
-	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
-		<td>Google Search</td>
-	</tr>
-	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
-		<td>Google Search</td>
-	</tr>
-	<tr>
-		<th>Tag</th>
-		<th>Description</th>
-	</tr>
-	<tr>
-		<td><a target ="_blank" href="https://www.google.com">Google</a></td>
+		<td><a target ="_blank" >Google</a></td>
 		<td>Google Search</td>
 	</tr>
 </body>
